--- a/style.css
+++ b/style.css
@@ -260,6 +260,14 @@ h1
   }
 
 
+  @media(max-width:1400px){
+    .footer-container{display: flex;flex-direction: column;align-items: center;}
+    .footer-cont{display: flex;flex-direction: column;align-items: center;}
+    .foot-child2{margin: 20px 0;align-items: center;}
+    .foot-child1{align-items: center;}
+  }
+
+
 /* first section */
 @media(min-width:992px){
     .fs-img img{width: 30%;}
@@ -287,6 +295,7 @@ h1
 @media(max-width:1024px)
 {
     .header .log-btn .button{padding: 25px 80px 0 50px;}
+    .footer-container span{display: none;}
 }
 
 @media(max-width:768px)
@@ -304,7 +313,7 @@ h1
     .header .log-btn{justify-content: center;}
     .mob-parent{display:flex;align-items: center;justify-content: space-between; background-color: rgba(27, 25, 25, 0.572);
     position: absolute;top: 106px;width: 100%;height: 100px;padding: 0 30px;
-    z-index: 20;}
+    z-index: 19;}
     .mob-parent .button
     {
         display: flex;
@@ -440,6 +449,10 @@ h1
       /* second section */
      .second-section div{height: 400px;}
      .second-section div img{width: 100px;height: 150px;}
+     .foot-child3{text-align: center;}
+     .foot-child1{text-align: center;}
+     .foot-same{flex-direction: column;text-align: center;}
+     .foot-same p{margin-bottom: 4px;}
         
     }
 
